--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "start-storybook -p 9009 -s public",
+    "build": "build-storybook -s public",
+    "test": "run-s test:*",
+    "test:eslint": "eslint --format unix ./src",
+    "test:react-scripts": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-links": "^5.1.9",
+    "@storybook/addons": "^5.1.9",
+    "@storybook/react": "^5.1.9",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "optionalDependencies": {
+    "flow-bin": "^0.102.0"
   }
 }
