--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "draft-js": "^0.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "recompose": "^0.30.0"
   },
   "scripts": {
     "start": "start-storybook -p 9009 -s public",
@@ -17,6 +19,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.1.9",
+    "@storybook/addon-knobs": "^5.1.9",
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addon-viewport": "^5.1.9",
     "@storybook/addons": "^5.1.9",
@@ -28,5 +31,6 @@
   },
   "optionalDependencies": {
     "flow-bin": "^0.102.0"
-  }
+  },
+  "peerDependencies": {}
 }
