--- a/.gitignore
+++ b/.gitignore
@@ -9,32 +9,11 @@
 /coverage
 
 # production
-/build
-
-# story book
-storybook-static
+/dist
+/lib
 
 # idea
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/shelf
-.idea/**/markdown-navigator
-
-# Generated files
-.idea/**/contentModel.xml
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+.idea
 
 # File-based project format
 *.iws
