--- a/package.json
+++ b/package.json
@@ -1,36 +1,65 @@
 {
   "name": "seine",
+  "description": "Seine is a Javascript library of React components and utilities to view and edit structured content.",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "draft-js": "^0.11.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "recompose": "^0.30.0"
-  },
+  "main": "lib/Seine.cjs.js",
+  "module": "lib/Seine.esm.js",
+  "repository": "redchiliorg/seine",
+  "license": "MIT",
   "scripts": {
-    "start": "start-storybook -p 9009 -s public",
-    "build": "build-storybook -s public",
+    "start": "serve",
+    "build": "run-s build:*",
+    "build:cjs": "rollup --environment NODE_ENV:production,FORMAT:cjs,DIR:lib -c",
+    "build:esm": "rollup --environment NODE_ENV:production,FORMAT:esm,DIR:lib -c",
+    "build:umd": "rollup --environment NODE_ENV:production,FORMAT:umd,DIR:lib -c",
+    "build:storybook": "build-storybook -s public -o dist",
+    "build:demos": "rollup --environment NODE_ENV:production,FORMAT:umd,DIR:dist -c",
+    "dev": "run-s dev:*",
+    "dev:start": "start-storybook -p 9009 -s public",
     "test": "run-s test:*",
-    "test:eslint": "eslint --format unix ./src",
-    "test:react-scripts": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:eslint": "eslint --format unix ./src"
+  },
+  "dependencies": {
+    "recompose": "^0.30.0",
+    "serve": "^11.1.0"
   },
   "devDependencies": {
+    "@babel/core": "7.4.3",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-knobs": "^5.1.9",
     "@storybook/addon-links": "^5.1.9",
     "@storybook/addon-viewport": "^5.1.9",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-preset-react-app": "^9.0.0",
+    "draft-js": "^0.11.0",
+    "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "flow-bin": "^0.102.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "rollup": "^1.19.4",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
-  "optionalDependencies": {
-    "flow-bin": "^0.102.0"
-  },
-  "peerDependencies": {}
+  "peerDependencies": {
+    "draft-js": "^0.11.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  }
 }
