#132 Упаковка seine как js-библиотеки компонентов
* eject react scripts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,3 +28,15 @@ build:
     - docker tag $IMAGE_TAG $RELEASE_IMAGE_TAG
     - docker push $IMAGE_TAG
     - docker push $RELEASE_IMAGE_TAG
+
+publish:
+  only:
+    - tags
+  stage: build
+  image: node:8-alpine
+  before_script:
+    - yarn config set //registry.npmjs.org/:_authToken $NPM_TOKEN
+    - yarn install
+  script:
+    - yarn publish --new-version $CI_COMMIT_TAG
+
