--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seine",
   "description": "Seine is a Javascript library of React components and utilities to view and edit structured content.",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "keywords": [
     "react",
     "richtext"
@@ -15,14 +15,15 @@
     "dev": "run-s dev:*",
     "test": "run-s test:*",
     "build": "run-s build:storybook build:demos",
-    "prepublish": "run-p build:cjs build:esm build:umd",
+    "prepare": "run-p build:cjs build:esm build:umd",
     "build:cjs": "rollup --environment NODE_ENV:production,FORMAT:cjs,DIR:lib -c",
     "build:esm": "rollup --environment NODE_ENV:production,FORMAT:esm,DIR:lib -c",
     "build:umd": "rollup --environment NODE_ENV:production,FORMAT:umd,DIR:lib -c",
     "build:storybook": "build-storybook -s public -o dist",
     "build:demos": "rollup --environment NODE_ENV:production,FORMAT:umd,DIR:dist -c",
     "dev:start": "start-storybook -p 9009 -s public",
-    "test:eslint": "eslint --format unix ./src"
+    "test:eslint": "eslint --format unix ./src",
+    "test:jest": "jest"
   },
   "dependencies": {
     "recompose": "^0.30.0",
@@ -30,16 +31,15 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addon-viewport": "^5.1.9",
+    "@storybook/addon-storyshots": "^5.1.11",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "babel-eslint": "10.0.1",
+    "babel-jest": "^24.9.0",
     "babel-loader": "8.0.5",
+    "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
     "draft-js": "^0.11.0",
@@ -48,15 +48,22 @@
     "eslint-config-react-app": "^4.0.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsdoc": "^15.8.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
-    "flow-bin": "^0.102.0",
+    "flow-bin": "^0.105.2",
+    "jest": "^24.9.0",
+    "jest-pnp-resolver": "^1.2.1",
+    "jest-resolve": "^24.9.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.2",
     "react-dom": "^16.8.6",
+    "react-test-renderer": "^16.9.0",
+    "require-context.macro": "^1.1.1",
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.2",
