--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seine",
   "description": "Seine is a Javascript library of React components and utilities to view and edit structured content.",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "keywords": [
     "react",
     "richtext"
@@ -26,6 +26,7 @@
     "test:jest": "jest"
   },
   "dependencies": {
+    "draft-js-buttons": "^2.0.2",
     "recompose": "^0.30.0",
     "serve": "^11.1.0",
     "uuid": "^3.3.2"
@@ -44,6 +45,7 @@
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
+    "clsx": "^1.0.4",
     "draft-js": "^0.11.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
@@ -56,10 +58,13 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
     "flow-bin": "^0.105.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "jest-pnp-resolver": "^1.2.1",
     "jest-resolve": "^24.9.0",
+    "muicss": "^0.9.43",
     "npm-run-all": "^4.1.5",
+    "polished": "^3.4.1",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.2",
@@ -70,6 +75,7 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
     "styled-components": "^4.3.2"
   },
   "peerDependencies": {
