#142 Split modules to monorepo packages

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,8 +2,8 @@
   "name": "@seine/core",
   "version": "1.0.0",
   "description": "Seine core utils and types.",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.esm.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
@@ -12,9 +12,5 @@
   },
   "peerDependencies": {
     "react": "^16.8.6"
-  },
-  "scripts": {
-    "build": "rollup --environment NODE_ENV:production -c"
-  },
-  "devDependencies": {}
+  }
 }
