--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -2,8 +2,8 @@
   "name": "@seine/draft",
   "version": "1.0.0",
   "description": "Seine structured content renderer.",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.esm.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
