--- a/package.json
+++ b/package.json
@@ -29,28 +29,26 @@
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-storyshots": "^5.1.11",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
-    "babel-eslint": "10.0.1",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.5",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
-    "babel-preset-react-app": "^9.0.0",
-    "eslint": "^5.16.0",
+    "babel-preset-react-app": "^9.0.1",
     "eslint-config-prettier": "^6.0.0",
-    "eslint-config-react-app": "^4.0.1",
+    "eslint-config-react-app": "^5.0.1",
     "eslint-plugin-flowtype": "2.50.1",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsdoc": "^15.8.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "7.12.4",
-    "eslint-plugin-react-hooks": "^1.5.0",
     "flow-bin": "^0.105.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
@@ -68,6 +66,7 @@
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-flow-entry": "^0.3.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "styled-components": "^4.3.2"
