--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -2,8 +2,8 @@
   "name": "@seine/content",
   "version": "1.0.0",
   "description": "Seine structured content renderer.",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.esm.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
@@ -15,6 +15,5 @@
   "peerDependencies": {
     "react": "^16.8.6",
     "styled-components": "^4.3.2"
-  },
-  "devDependencies": {}
+  }
 }
