#142 Split modules to monorepo packages

--- a/package.json
+++ b/package.json
@@ -7,36 +7,30 @@
     "richtext"
   ],
   "private": true,
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.esm.js",
   "repository": "redchiliorg/seine",
   "license": "MIT",
   "scripts": {
     "start": "serve",
     "dev": "run-s dev:*",
     "test": "run-s test:*",
-    "build": "run-s build:storybook build:demos",
-    "prepare": "run-p build",
-    "build:lib": "rollup --environment NODE_ENV:production -c",
-    "build:storybook": "build-storybook -s public -o dist",
-    "build:demos": "rollup --environment NODE_ENV:production,FORMAT:umd,DIR:dist -c",
+    "build": "run-s build:storybook",
+    "prepare": "run-s build",
+    "build:packages": "rollup --environment NODE_ENV:production -c",
+    "build:storybook": "build-storybook -o dist",
     "dev:start": "start-storybook -p 9009 -s public",
     "test:eslint": "eslint --format unix ./src",
     "test:jest": "jest"
   },
   "dependencies": {
-    "serve": "^11.1.0"
+    "serve": "^11.1.0",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-storyshots": "^5.1.11",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "1.6.0",
-    "@typescript-eslint/parser": "1.6.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.5",
     "babel-plugin-macros": "^2.6.1",
@@ -56,7 +50,6 @@
     "jest-resolve": "^24.9.0",
     "muicss": "^0.9.43",
     "npm-run-all": "^4.1.5",
-    "polished": "^3.4.1",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.2",
