--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -15,5 +15,8 @@
   "peerDependencies": {
     "react": "^16.8.6",
     "styled-components": "^4.3.2"
+  },
+  "scripts": {
+    "build": "rollup --environment NODE_ENV:production -f esm -c"
   }
 }
