--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -17,5 +17,7 @@
     "react": "^16.8.6",
     "styled-components": "^4.3.2"
   },
-  "devDependencies": {}
+  "scripts": {
+    "build": "rollup --environment NODE_ENV:production -f esm -c"
+  }
 }
