--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -20,5 +20,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
+  },
+  "scripts": {
+    "build": "rollup --environment NODE_ENV:production -f esm -c"
   }
 }
