--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.1",
+    "draft-js": "^0.11.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react-app": "^5.0.1",
     "eslint-plugin-flowtype": "2.50.1",
