--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
     "dev": "run-s dev:*",
     "test": "run-s test:*",
     "build": "run-s build:storybook",
-    "prepare": "run-s build:cjs build:esm",
     "build:cjs": "yarn workspaces run rollup --environment NODE_ENV:production -f cjs -c",
     "build:esm": "yarn workspaces run rollup --environment NODE_ENV:production -f esm -c",
     "build:storybook": "build-storybook -o dist",
     "dev:start": "start-storybook -p 9009 -s public",
-    "test:eslint": "eslint --format unix ./src",
+    "test:eslint": "eslint --format unix src/ packages/*/src",
     "test:jest": "jest"
   },
   "dependencies": {
-    "serve": "^11.1.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "serve": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
@@ -32,19 +31,23 @@
     "@storybook/addon-storyshots": "^5.1.11",
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.5",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.1",
     "draft-js": "^0.11.0",
+    "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-react-app": "^5.0.1",
-    "eslint-plugin-flowtype": "2.50.1",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsdoc": "^15.8.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-flowtype": "^4.2.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsdoc": "^15.9.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "flow-bin": "^0.105.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
