#142 Split modules to monorepo packages

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dev": "run-s dev:*",
     "test": "run-s test:*",
     "build": "run-s build:storybook",
-    "prepare": "run-s build:packages:* build",
-    "build:packages:cjs": "yarn workspaces run rollup --environment NODE_ENV:production -f cjs -c",
+    "prepare": "run-s build:packages:*",
     "build:packages:esm": "yarn workspaces run rollup --environment NODE_ENV:production -f esm -c",
+    "build:packages:cjs": "yarn workspaces run rollup --environment NODE_ENV:production -f cjs -c",
     "build:storybook": "build-storybook -o dist",
     "dev:start": "start-storybook -p 9009 -s public",
     "test:eslint": "eslint --format unix src/ packages/*/src",
