--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,5 +40,5 @@ publish:
     - yarn install
   script:
     - npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-    - yarn workspaces publish --access public --new-version ${CI_COMMIT_TAG}
+    - yarn workspaces run publish --access public --new-version ${CI_COMMIT_TAG}
 
