#142 Split modules to monorepo packages

--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -2,8 +2,7 @@
   "name": "@seine/content",
   "version": "0.2.11",
   "description": "Seine structured content renderer.",
-  "main": "lib/cjs/index.js",
-  "module": "lib/esm/index.js",
+  "main": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
