--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,47 +1,33 @@
 stages:
   - test
-  - build
-  - build-stable
+  - publish
 
-test:
-  except:
-    - tags
-  stage: test
+default:
+  stage: ${CI_JOB_NAME}
   image: node:10-alpine
-  before_script:
-    - yarn install
-  script:
-    - yarn test
-
-build:
-  only:
-    - tags
-  stage: build
-  image: docker:stable
-  services:
-    - docker:dind
-  variables:
-    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_TAG
-    RELEASE_IMAGE_TAG: $CI_REGISTRY_IMAGE:latest
-  before_script:
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN registry.gitlab.com
-  script:
-    - docker build -t $IMAGE_TAG .
-    - docker tag $IMAGE_TAG $RELEASE_IMAGE_TAG
-    - docker push $IMAGE_TAG
-    - docker push $RELEASE_IMAGE_TAG
-
-publish:
-  only:
-    - tags
-  stage: build
-  image: node:10-alpine
+  cache:
+    paths:
+      - /var/cache/apk
+      - .yarn-cache
   before_script:
     - apk update
     - apk upgrade
     - apk add git
+    - yarn config set cache-folder .yarn-cache
+  script:
+    - yarn
+
+test:
+  script: yarn test
+  except: [tags]
+
+publish:
+  only: [tags]
+  image: node:10-alpine
+  before_script:
     - yarn install
   script:
-    - yarn config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
+    - yarn config delete //registry.npmjs.org/:_authToken
     - yarn workspaces run publish --access public --new-version ${CI_COMMIT_TAG}
+    - yarn config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
 
