--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,6 @@ stages:
 
 default:
   image: node:10-alpine
-  stage: ${CI_JOB_NAME}
   cache:
     paths:
       - /var/cache/apk
@@ -14,14 +13,15 @@ default:
     - apk upgrade
     - apk add git
     - yarn config set cache-folder .yarn-cache
-  script:
-    - yarn
+  script: [yarn]
 
 test:
-  script: yarn test
+  stage: test
+  script: [yarn test]
   except: [tags]
 
 publish:
+  stage: publish
   only: [tags]
   before_script:
     - yarn login username=${NPM_USERNAME} email=${NPM_EMAIL}
