--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ stages:
 default:
   image: node:10-alpine
   cache:
+    key: ${CI_COMMIT_TAG}
     paths:
       - /var/cache/apk
       - .yarn-cache
@@ -14,7 +15,9 @@ default:
 test:
   stage: test
   except: [tags]
-  script: [yarn test]
+  script:
+    - yarn
+    - yarn test
 
 publish:
   stage: publish
