testbox/bream#441 Pie-диаграмы в прохождении и ревью теста
* remove global styles

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,29 +4,31 @@ stages:
 
 default:
   image: node:10-alpine
-  stage: ${CI_JOB_NAME}
   cache:
+    key: "$CI_COMMIT_REF_SLUG"
     paths:
-      - /var/cache/apk
-      - .yarn-cache
+      - /var/cache/apk/
+      - .yarn-cache/
+  before_script:
+    - yarn config set cache-folder .yarn-cache
+
+test:
+  stage: test
+  except: [tags]
+  script:
+    - yarn
+    - yarn test
+
+publish:
+  stage: publish
+  only: [tags]
   before_script:
     - apk update
     - apk upgrade
     - apk add git
-    - yarn config set cache-folder .yarn-cache
   script:
-    - yarn
-
-test:
-  script: yarn test
-  except: [tags]
-
-publish:
-  only: [tags]
-  before_script:
     - yarn login username=${NPM_USERNAME} email=${NPM_EMAIL}
     - yarn config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-  script:
     - yarn workspaces run publish --access public --new-version ${CI_COMMIT_TAG}
   after_script:
     - yarn config delete //registry.npmjs.org/:_authToken
