--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,27 @@
 stages:
-  - test
   - publish
 
 default:
+  stage: publish
   image: node:10-alpine
   cache:
-    key: "$CI_COMMIT_REF_SLUG"
+    key: "$CI_JOB_STAGE"
     paths:
       - /var/cache/apk/
       - .yarn-cache/
   before_script:
     - yarn config set cache-folder .yarn-cache
 
-test:
-  stage: test
-  except: [tags]
-  script:
-    - yarn
-    - yarn test
-
 publish:
-  stage: publish
   only: [tags]
   before_script:
     - apk update
     - apk upgrade
     - apk add git
   script:
-    - yarn login username=${NPM_USERNAME} email=${NPM_EMAIL}
-    - yarn config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-    - yarn workspaces run publish --access public --new-version ${CI_COMMIT_TAG}
+    - { echo "$NPM_USERNAME"; sleep 1; echo "$NPM_EMAIL"; } | yarn login
+    - yarn config set //registry.npmjs.org/:_authToken "$NPM_TOKEN"
+    - yarn workspaces run publish --access public --new-version 0.2.12
   after_script:
     - yarn config delete //registry.npmjs.org/:_authToken
     - yarn logout
