--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ publish:
   script:
     - { echo "$NPM_USERNAME"; sleep 1; echo "$NPM_EMAIL"; } | yarn login
     - yarn config set //registry.npmjs.org/:_authToken "$NPM_TOKEN"
-    - yarn workspaces run publish --access public --new-version 0.2.12
+    - yarn workspaces run publish --access public --new-version "$CI_COMMIT_TAG"
   after_script:
     - yarn config delete //registry.npmjs.org/:_authToken
     - yarn logout
