--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ publish:
     - apk upgrade
     - apk add git
   script:
-    - { echo "$NPM_USERNAME"; sleep 1; echo "$NPM_EMAIL"; } | yarn login
+    - \{ echo "$NPM_USERNAME"; sleep 1; echo "$NPM_EMAIL"; \} \| yarn login
     - yarn config set //registry.npmjs.org/:_authToken "$NPM_TOKEN"
     - yarn workspaces run publish --access public --new-version "$CI_COMMIT_TAG"
   after_script:
