#142 Split modules to monorepo packages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,10 +16,6 @@ publish:
     - apk update
     - apk upgrade
     - apk add git
-  script:
-    - \{ echo "$NPM_USERNAME"; sleep 1; echo "$NPM_EMAIL"; \} \| yarn login
-    - yarn config set //registry.npmjs.org/:_authToken "$NPM_TOKEN"
-    - yarn workspaces run publish --access public --new-version "$CI_COMMIT_TAG"
+  script: [./scripts/yarn-login.sh]
   after_script:
-    - yarn config delete //registry.npmjs.org/:_authToken
     - yarn logout
