--- a/packages/content/package.json
+++ b/packages/content/package.json
@@ -2,14 +2,15 @@
   "name": "@seine/content",
   "version": "0.3.0",
   "description": "Seine structured content renderer.",
-  "main": "lib/esm/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "0.3.0",
-    "@seine/draft": "0.3.0",
-    "@seine/pie": "0.3.0"
+    "@seine/core": "^0.3.0",
+    "@seine/draft": "^0.3.0",
+    "@seine/pie": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
