--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,8 @@
   "name": "@seine/core",
   "version": "0.3.0",
   "description": "Seine core utils and types.",
-  "main": "lib/esm/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
