--- a/packages/draft-editor/package.json
+++ b/packages/draft-editor/package.json
@@ -2,19 +2,21 @@
   "name": "@seine/draft-editor",
   "version": "0.3.0",
   "description": "Seine structured content renderer.",
-  "main": "lib/esm/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "0.3.0",
-    "@seine/draft": "0.3.0",
-    "@seine/ui": "0.3.0",
+    "@seine/core": "^0.3.0",
+    "@seine/draft": "^0.3.0",
+    "@seine/ui": "^0.3.0",
     "draft-js-buttons": "^2.0.2"
   },
   "peerDependencies": {
     "draft-js": "^0.11.0",
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   }
 }
