--- a/packages/pie-editor/package.json
+++ b/packages/pie-editor/package.json
@@ -7,9 +7,9 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "0.3.0",
-    "@seine/pie": "0.3.0",
-    "@seine/ui": "0.3.0"
+    "@seine/core": "^0.3.0",
+    "@seine/pie": "^0.3.0",
+    "@seine/ui": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
