--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,7 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "0.3.0",
+    "@seine/core": "^0.3.0",
     "clsx": "^1.0.4"
   },
   "peerDependencies": {
