--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
     "dev": "run-s dev:*",
     "test": "run-s test:*",
     "build": "run-s build:storybook",
-    "prepare": "run-s build:packages:*",
-    "build:packages:esm": "yarn workspaces run rollup --environment NODE_ENV:production -f esm -c",
+    "build:packages": "yarn workspaces run rollup --environment NODE_ENV:production -c",
     "build:storybook": "build-storybook -o dist",
     "dev:start": "start-storybook -p 9009 -s public",
-    "test:eslint": "eslint --format unix src/ packages/*/src",
+    "test:eslint": "eslint -c packages/core/.eslintrc.js --format unix packages/*/src",
     "test:jest": "jest"
   },
   "dependencies": {
@@ -34,6 +33,7 @@
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.5",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-macros": "^2.6.1",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.1",
@@ -63,10 +63,12 @@
     "require-context.macro": "^1.1.1",
     "rollup": "^1.19.4",
     "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-commonjs": "^10.0.2",
     "rollup-plugin-flow-entry": "^0.3.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-visualizer": "^2.5.4",
     "styled-components": "^4.3.2"
   },
   "workspaces": [
