--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -1,19 +1,21 @@
 {
   "name": "@seine/draft",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "Seine structured content renderer.",
-  "main": "lib/esm/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "0.3.0",
+    "@seine/core": "^0.3.0",
     "clsx": "^1.0.4",
     "recompose": "^0.30.0"
   },
   "peerDependencies": {
     "draft-js": "^0.11.0",
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   }
 }
