--- a/packages/pie/package.json
+++ b/packages/pie/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@seine/pie",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "Seine structured content renderer.",
-  "main": "lib/esm/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "0.3.0"
+    "@seine/core": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
