--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@seine/ui",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "Seine structured content renderer.",
   "main": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "0.3.0",
+    "@seine/core": "^0.3.0",
     "clsx": "^1.0.4"
   },
   "peerDependencies": {
