--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "^24.9.0",
     "jest-pnp-resolver": "^1.2.1",
     "jest-resolve": "^24.9.0",
+    "minimist": "^1.2.0",
     "muicss": "^0.9.43",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
@@ -73,6 +74,6 @@
     "styled-components": "^4.3.2"
   },
   "workspaces": [
-    "packages/*"
+    "packages/content"
   ]
 }
