--- a/packages/pie-editor/package.json
+++ b/packages/pie-editor/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@seine/pie-editor",
-  "version": "0.3.3",
+  "version": "0.3.6",
   "description": "Seine structured content renderer.",
-  "main": "lib/esm/index.js",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
