--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -4,6 +4,11 @@
   "description": "Seine structured content renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
+  "files": [
+    "lib/cjs/index.js.flow",
+    "lib/esm/index.js",
+    "lib/esm/index.js.flow"
+  ],
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
   "license": "MIT",
