--- a/packages/barchart-editor/package.json
+++ b/packages/barchart-editor/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@seine/pie",
-  "version": "0.3.12",
-  "description": "Seine pie chart renderer.",
+  "name": "@seine/barchart-editor",
+  "version": "0.3.13",
+  "description": "Seine bar chart editor.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "files": [
@@ -11,10 +11,12 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "^0.3.0"
+    "@seine/core": "^0.3.0",
+    "@seine/ui": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   }
 }
