--- a/packages/draft/package.json
+++ b/packages/draft/package.json
@@ -1,13 +1,11 @@
 {
   "name": "@seine/draft",
-  "version": "0.3.12",
-  "description": "Seine structured content renderer.",
+  "version": "0.3.13",
+  "description": "Seine draft.js renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "files": [
-    "lib/cjs/index.js.flow",
-    "lib/esm/index.js",
-    "lib/esm/index.js.flow"
+    "lib/"
   ],
   "repository": "redchiliorg/seine",
   "author": "Mikhail Boyarov",
