#467 Вывод - Столбчатой горизонтальной диаграммы

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "packages/ui",
     "packages/draft",
     "packages/pie",
+    "packages/barchart",
     "packages/content",
     "packages/draft-editor",
     "packages/pie-editor",
