--- a/packages/barchart-editor/package.json
+++ b/packages/barchart-editor/package.json
@@ -12,11 +12,11 @@
   "license": "MIT",
   "dependencies": {
     "@seine/core": "^0.3.0",
-    "@seine/ui": "^0.3.0"
+    "@seine/ui": "^0.3.0",
+    "@seine/barchart": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
     "styled-components": "^4.3.2"
   }
 }
