Add bar chart renderer module
* #467 Вывод - Столбчатой горизонтальной диаграммы

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "scripts": {
     "start": "serve",
     "release": "run-s release:*",
+    "release:test": "run-s test:eslint",
     "release:build": "run-p release:build:*",
     "release:build:cjs": "yarn workspaces run rollup --environment NODE_ENV:production -f cjs -c ../../rollup.config.js",
     "release:build:esm": "yarn workspaces run rollup --environment NODE_ENV:production,VISUALIZER_TEMPLATE:treemap -f esm -c ../../rollup.config.js",
+    "release:build:test": "run-p test:jest",
     "release:publish": "node scripts/publish.js",
     "storybook": "build-storybook -o dist",
     "test": "run-s test:*",
@@ -80,6 +82,7 @@
     "packages/ui",
     "packages/draft",
     "packages/pie",
+    "packages/barchart",
     "packages/content",
     "packages/draft-editor",
     "packages/pie-editor",
