--- a/packages/barchart/package.json
+++ b/packages/barchart/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@seine/ui",
+  "name": "@seine/barchart",
   "version": "0.3.14",
-  "description": "Seine UI library.",
+  "description": "Seine bar chart renderer.",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
   "files": [
@@ -11,14 +11,10 @@
   "author": "Mikhail Boyarov",
   "license": "MIT",
   "dependencies": {
-    "@seine/core": "^0.3.0",
-    "clsx": "^1.0.4"
+    "@seine/core": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.8.6",
     "styled-components": "^4.3.2"
-  },
-  "scripts": {
-    "build": "rollup --environment NODE_ENV:production"
   }
 }
